MESSAGE( STATUS "    --> in 'LibHdf5'" )

FILE( GLOB LibHdf5_Src_Code *.f* *.c )
MESSAGE( STATUS "    --> LibHdf5_Src_Code: ${LibHdf5_Src_Code}" )

ADD_LIBRARY( LibHdf5Shared SHARED ${LibHdf5_Src_Code} )
SET_TARGET_PROPERTIES( LibHdf5Shared PROPERTIES LINKER_LANGUAGE Fortran )
SET_TARGET_PROPERTIES( LibHdf5Shared PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}" )
SET_TARGET_PROPERTIES( LibHdf5Shared PROPERTIES Fortran_FORMAT "FREE" )
INSTALL( TARGETS LibHdf5Shared RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} )

#TARGET_INCLUDE_DIRECTORIES( LibHdf5Shared PRIVATE ${HDF5_INCLUDE_DIRS} )
#INCLUDE_DIRECTORIES( ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} )

ADD_LIBRARY( LibHdf5Static STATIC ${LibHdf5_Src_Code} )
SET_TARGET_PROPERTIES( LibHdf5Static PROPERTIES LINKER_LANGUAGE Fortran )
SET_TARGET_PROPERTIES( LibHdf5Static PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}" )
SET_TARGET_PROPERTIES( LibHdf5Static PROPERTIES Fortran_FORMAT "FREE" )
INSTALL( TARGETS LibHdf5Static RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} )

