MESSAGE( STATUS "    --> in 'libMpi'" )

FILE( GLOB LibMpi_Src_Code *.f* *.c )
MESSAGE( STATUS "    --> LibMpi_Src_Code: ${LibMpi_Src_Code}" )

ADD_LIBRARY( LibMpiShared SHARED ${LibMpi_Src_Code} )
SET_TARGET_PROPERTIES( LibMpiShared PROPERTIES LINKER_LANGUAGE Fortran )
SET_TARGET_PROPERTIES( LibMpiShared PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}" )
SET_TARGET_PROPERTIES( LibMpiShared PROPERTIES Fortran_FORMAT "FREE" )
INSTALL( TARGETS LibMpiShared RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} )

ADD_LIBRARY( LibMpiStatic STATIC ${LibMpi_Src_Code} )
SET_TARGET_PROPERTIES( LibMpiStatic PROPERTIES LINKER_LANGUAGE Fortran )
SET_TARGET_PROPERTIES( LibMpiStatic PROPERTIES LINK_FLAGS "${MPI_LINK_FLAGS}" )
SET_TARGET_PROPERTIES( LibMpiStatic PROPERTIES Fortran_FORMAT "FREE" )
INSTALL( TARGETS LibMpiStatic RUNTIME DESTINATION ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} LIBRARY DESTINATION ${CMAKE_LIBRARY_OUTPUT_DIRECTORY} ARCHIVE DESTINATION ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY} )
